# mlir-air

./: compile.sh
cmake/modules/: toolchain_aarch64.cmake
mlir/include/air/Conversion/: Passes.h  Passes.td  TritonToAIRPass.h
mlir/lib/Conversion/: CMakeLists.txt  TritonToAIRPass.cpp
python/air/compiler/aircc/: main.py
runtime_lib/airhost/: host.cpp
runtime_lib/airhost/include/: air_host.h
test/: CMakeLists.txt
tools/air-opt/: CMakeLists.txt  air-opt.cpp
utils/: build-mlir-air.sh
